--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 			<h2>Мои контакты:</h2>
 			<p>Почта: <a href="mailto:email@gmail.com">email@gmail.com</a></p>
 			<p>Телефон: <a href="tel:8800800800">8 800 800 800</a></p>
-			<p>Соц. сеть: <a href="">ссылка на соц. сеть</a></p>
+			<p>ddeСоц. сеть: <a href="">ссылка на соц. сеть</a></p>
 		</div>
 	</div>
 </body>
